--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -33,7 +33,7 @@
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/user_repos"/>
+        android:text="@string/repos"/>
 
     <TextView
         android:layout_width="match_parent"
